[package]
name = "blindsign"
version = "0.0.7"
authors = ["boojies"]
repository = "https://github.com/boojies/blindsign"
readme = "README.md"
license = "MIT"
description = "A package for creating blind signatures cryptography ECC"
categories = ["cryptography"]
keywords = ["blind", "signature", "cryptography", "mix", "ECC"]
edition = "2021"

[dev-dependencies]
sha3 = "0.10.8"

[dependencies]
digest = "0.10.7"
rand = "0.8.5"
thiserror = "1.0"
typenum = "1.17.0"
curve25519-dalek = "4.1.3"
subtle = { version = "2.5", features = ["std"] }
log = "0.4"
env_logger = "0.11.2"
