[package]
name = "blindsign"
version = "0.0.6"
authors = ["boojies"]
repository = "https://github.com/boojies/blindsign"
readme = "README.md"
license = "MIT"
description = "A package for creating blind signatures cryptography ECC"
categories = ["cryptography"]
keywords = ["blind", "signature", "cryptography", "mix", "ECC"]

[dev-dependencies]
sha3 = "0.10.8"

[dependencies]
digest = "0.10.7"
rand = "0.8.5"
failure = "0.1.1"
failure_derive = "0.1.1"
typenum = "1.10.0"
curve25519-dalek = "4.1.3"
subtle = { version = "2.5", features = ["std"] }
log = "0.4.22"
